Fix image alignment inside MC Questions (#136)
* Fix image alignment inside MC Questions

* Adjust spacing inside MC Question block

* Adjust spacing inside MC Question block

--- a/packages/theme-compatibility/src/base/editor.scss
+++ b/packages/theme-compatibility/src/base/editor.scss
@@ -26,6 +26,18 @@
 		margin-bottom: 64px;
 		margin-top: 64px;
 	}
+
+	.crowdsignal-forms-question-wrapper__content {
+		.block-editor-block-list__layout {
+			display: flex;
+			flex-direction: column;
+
+			.wp-block {
+				margin-left: unset;
+				margin-right: unset;
+			}
+		}
+	}
 }
 
 .editor .iso-editor {
@@ -52,5 +64,35 @@
 
 	& :where(.wp-block)[data-align=left] > * {
 		float: left;
+	}
+}
+
+.crowdsignal-forms-question-wrapper__content .block-editor-block-list__layout > * {
+		margin-top: 0;
+		margin-bottom: 16px;
+
+	.wp-block.is-selected &:nth-last-child(2),
+	.wp-block.has-child-selected &:nth-last-child(2),
+	&:last-child {
+		margin-bottom: 0;
+	}
+
+	&[data-type="crowdsignal-forms/multiple-choice-answer"] + :not(.wp-block[data-type="crowdsignal-forms/multiple-choice-answer"]) {
+		margin-top: 32px;
+	}
+
+	&[data-align="left"], &[data-align="right"] {
+		figure {
+			margin-top: 0;
+			margin-bottom: 0;
+		}
+	}
+
+	.crowdsignal-forms-multiple-choice-answer-block {
+		margin-bottom: 0;
+	}
+
+	.components-resizable-box__container {
+		display: flex;
 	}
 }
