--- a/packages/theme-compatibility/src/base/base.scss
+++ b/packages/theme-compatibility/src/base/base.scss
@@ -49,6 +49,13 @@
 	}
 }
 
+.wp-block-image {
+	.alignleft,.alignright {
+		margin-top: 0;
+		margin-bottom: 0;
+	}
+}
+
 .crowdsignal-forms-form__content {
 	padding: var(--crowdsignal-forms-content-padding);
 
@@ -99,6 +106,16 @@
 			}
 		}
 	}
+}
+
+.crowdsignal-forms-button {
+	.crowdsignal-forms-multiple-choice-question-block & + *:not(&) {
+		margin-top: 24px;
+	}
+}
+
+.crowdsignal-forms-multiple-choice-answer-block {
+	display: flex;
 }
 
 @include break-medium {
